# FCCSW_feb15

./: ._init.sh  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  Makefile  ReadMe.txt  Tracker.root  cmake_install.cmake  detelements.txt  geant4_test.py  init.sh  myinit.sh  run  subdirs_deps.dot  test_options.py  test_options.py~
DataObjects/: CMakeLists.txt
DetectorDescription/DetData/DetData/: DetDataObject.h
DetectorDescription/DetDesInterfaces/DetDesInterfaces/: Header.h  IDetDesSvc.h  IGeometrySvc.h
DetectorDescription/DetDesServices/: CMakeLists.txt
DetectorDescription/DetDesServices/DetDesServices/: DD4HepDetDesSvc.h  RecoGeometrySvc.h
DetectorDescription/DetDesServices/src/: ._DD4HepDetDesSvc.cxx  DD4HepDetDesSvc.cxx  Geant4GeoSvc.h  RecoGeometrySvc.cxx
DetectorDescription/DetExtensions/: CMakeLists.txt
DetectorDescription/DetExtensions/DetExtensions/: DetCylinderLayer.h  DetDiscLayer.h
DetectorDescription/Detectors/: CMakeLists.txt
DetectorDescription/Detectors/compact/: ._TestTracker.xml  EndCap.xml  TestTracker.xml  TestTracker1.xml  TestTracker2.xml  TestTracker3.xml  TestTracker3_Trap.xml  TestTracker4.xml  TestTracker6.xml
DetectorDescription/Detectors/src/: Barrel_geo.cxx  EndCap_Trap_geo.cxx  EndCap_geo.cxx  Module_geo.cxx  TestTracker2_geo.cxx  TestTracker3_1_geo.cxx  TestTracker3_geo.cxx  TestTracker4_geo.cxx  TestTracker5_geo.cxx  TestTracker_geo.cxx  test_IronCylinder_geo.cxx
RecoGeometry/RecoGeometry/: BoundaryCylinderSurface.h  BoundaryDiscSurface.h  BoundarySurface.h  ContainerCylinderVolume.h  ContainerVolume.h  CylinderLayer.h  CylinderSurface.h  CylinderVolume.h  DiscLayer.h  DiscSurface.h  Layer.h  MaterialMap.h  NavigationLayer.h  PlaneSurface.h  Surface.h  TrapezoidSurface.h  Volume.h
RecoGeometry/src/: BoundaryCylinderSurface.cxx  BoundaryDiscSurface.cxx  BoundarySurface.cxx  ContainerCylinderVolume.cxx  ContainerVolume.cxx  CylinderLayer.cxx  CylinderSurface.cxx  CylinderVolume.cxx  DiscLayer.cxx  DiscSurface.cxx  Layer.cxx  MaterialMap.cxx  NavigationLayer.cxx  PlaneSurface.cxx  Surface.cxx  TrapezoidSurface.cxx  Volume.cxx
Simulation/SimulationFast/SimFastTools/: CMakeLists.txt  CMakeLists.txt~
Simulation/SimulationFast/SimFastTools/SimFastTools/: RecoGeoConverterTool.h
Simulation/SimulationFast/SimFastTools/src/: RecoGeoConverterTool.cxx
Simulation/SimulationG4/SimG4Tools/: CMakeLists.txt
Simulation/SimulationG4/SimG4Tools/SimG4Tools/: Geant4GeoConverterTool.h
Simulation/SimulationG4/SimG4Tools/src/: ._Geant4GeoConverterTool.cxx  B1PrimaryGeneratorAction.cxx  Geant4GeoConverterTool.cxx
Simulation/SimulationInterfaces/: CMakeLists.txt
Test/TestAlgorithms/: CMakeLists.txt
Test/TestAlgorithms/TestAlgorithms/: Gent4Test.h  RecoGeoTest.h  TestAlgorithm.h
Test/TestAlgorithms/src/: RecoGeoTest.cxx  TestAlgorithm.cxx
config/: FCCSWBuildEnvironment.xml  FCCSWBuildEnvironment.xmlc  FCCSWConfig.cmake  FCCSWEnvironment.xml  FCCSWPlatformConfig.cmake  manifest.xml
(+11 files in other folders)
